--- a/src/scss/deck.scss
+++ b/src/scss/deck.scss
@@ -3,14 +3,60 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .text-defaults {
+    @apply antialiased text-left text-white;
+  }
+
+  .blur-common-settings {
+    @apply backdrop-saturate-[1.8] backdrop-brightness-75;
+  }
+
+  .blur-thick {
+    @apply backdrop-blur-[64px] backdrop-contrast-[1.3] blur-common-settings;
+  }
+
+  .blur-medium {
+    @apply backdrop-blur-[48px] backdrop-contrast-[1.2] blur-common-settings;
+  }
+
+  .blur-thin {
+    @apply backdrop-blur-[32px] backdrop-contrast-[1.1] blur-common-settings;
+  }
+
+  .titlecard {
+    @apply pt-8 px-12 pb-12 uppercase w-fit h-fit blur-thick text-center border-[20px] border-white;
+  }
+
+  .photo-attribution {
+    text-shadow: 0 0 8px black;
+    @apply w-fit h-fit text-center transform origin-bottom translate-x-1/2 -rotate-90 text-2xl italic;
+  }
+
+  .print-pdf .photo-attribution { display: none; }
+  @media print { .photo-attribution { display: none; } }
+
+  .slide-frame {
+    aspect-ratio: 16 / 9;
+    @apply p-20 w-5/6 mx-auto space-y-2 blur-medium border-[10px] border-white text-4xl leading-normal;
+  }
+
+  .slide-title {
+    @apply underline underline-offset-auto decoration-auto pb-8;
+  }
+}
+
 // Fonts
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&family=Source+Code+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
 
 // Reveal.js
 @import "~reveal.js/dist/reveal.css";
 
 // Highlight.js theme
-@import "~highlight.js/scss/ocean.scss";
+@import "~highlight.js/scss/base16/ocean.scss";
 
 // Additional Styles
 @import "theme.scss";
