--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,74 +1,86 @@
+* {
+    @apply text-defaults;
+}
+
 .reveal {
-    @apply bg-gray-800 text-gray-100;
+  @apply bg-gray-800;
 
-    .controls button {
-        @apply text-gray-600;
+  .controls button {
+    @apply text-gray-600;
+  }
+
+  .progress {
+    @apply bg-gray-700;
+
+    span {
+      @apply bg-gray-600;
     }
-
-    .progress {
-        @apply bg-gray-700;
-
-        span {
-            @apply bg-gray-600;
-        }
-    }
+  }
 }
 
-h1, h2, h3, h4, h5, h6 {
-    @apply font-extralight;
+h1 {
+  @apply text-9xl font-display font-black;
+}
+h2 {
+  @apply text-7xl font-display font-black;
+}
+h3 {
+  @apply text-5xl font-display font-bold;
+}
+h4 {
+  @apply text-3xl font-display;
 }
 
-h1 { @apply text-6xl; }
-h2 { @apply text-4xl; }
-h3 { @apply text-2xl; }
-h4 { @apply font-bold; }
+ul {
+  @apply list-disc ml-12;
+}
 
-p {
-    @apply font-light leading-relaxed text-2xl my-6;
+ol {
+  @apply list-decimal ml-12;
 }
 
 blockquote {
-    @apply bg-gray-700 shadow-lg mx-auto my-6 p-6 w-4/5;
+  @apply bg-gray-700 shadow-lg mx-auto my-6 p-6 w-4/5;
 
-    p {
-        @apply italic text-4xl leading-relaxed;
-    }
+  p {
+    @apply italic text-4xl leading-relaxed;
+  }
 }
 
 code {
-    @apply font-mono leading-normal inline-block bg-gray-700 rounded shadow m-1 px-2 py-1;
+  @apply font-mono leading-normal inline-block bg-gray-700 rounded shadow m-1 px-2 py-1;
 }
 
 pre {
-    @apply rounded shadow-lg bg-ocean-dark mx-auto my-6 p-6 max-w-full;
+  @apply rounded shadow-lg bg-ocean-dark mx-auto my-6 p-6 max-w-full;
 
-    > code {
-        @apply font-mono leading-normal text-xl text-left block rounded-none shadow-none m-0 p-0;
-    }
+  > code {
+    @apply font-mono leading-normal text-3xl text-left block rounded-none shadow-none m-0 p-0;
+  }
 }
 
 table {
-    @apply text-left mx-auto my-6;
+  @apply text-left mx-auto my-6;
 
-    thead {
-        th {
-            @apply font-bold border-b-2 border-white px-4 py-2;
-        }
+  thead {
+    th {
+      @apply font-bold border-b-2 border-white px-4 py-2;
     }
+  }
 
-    td {
-        @apply px-4 py-2;
-    }
+  td {
+    @apply px-4 py-2;
+  }
 }
 
 a {
-    @apply text-teal-400;
+  @apply text-teal-400;
 
-    &:hover {
-        @apply underline;
-    }
+  &:hover {
+    @apply underline;
+  }
 }
 
 hr {
-    @apply border-gray-700 my-8;
+  @apply border-gray-700 my-8;
 }
